[gd_scene load_steps=51 format=2]

[ext_resource path="res://content/caves/scannercave/ScannerCave.gd" type="Script" id=1]
[ext_resource path="res://content/caves/scannercave/alpha.png" type="Texture" id=2]
[ext_resource path="res://content/caves/scannercave/scannercave_sheet.png" type="Texture" id=3]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=4]
[ext_resource path="res://content/gadgets/blastMining/focussed.png" type="Texture" id=5]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/caves/scannercave/scannercavesides_sheet.png" type="Texture" id=8]
[ext_resource path="res://content/sounds/Weapons/obelisk/bassy.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/Amb/Scanneramb.wav" type="AudioStream" id=10]
[ext_resource path="res://content/caves/scannercave/scanner_spriteframes.tres" type="SpriteFrames" id=11]
[ext_resource path="res://content/drop/iron/iron_smol.png" type="Texture" id=12]
[ext_resource path="res://content/shared/drops/ResourceGrabber.tscn" type="PackedScene" id=13]


[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 36, 23 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 36, 23 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 36, 0, 36, 23 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 72, 0, 36, 23 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 108, 0, 36, 23 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 0, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 36, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 72, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 108, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 144, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 180, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 216, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 252, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 288, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 324, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 360, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 396, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 432, 23, 36, 23 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 468, 23, 36, 23 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 24 ) ],
"loop": false,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "start",
"speed": 10.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 8 )
region = Rect2( 0, 46, 36, 23 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 8 )
region = Rect2( 0, 46, 36, 23 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 8 )
region = Rect2( 36, 46, 36, 23 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 8 )
region = Rect2( 72, 46, 36, 23 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 108, 46, 36, 23 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 0, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 36, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 72, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 108, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 144, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 8 )
region = Rect2( 180, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 8 )
region = Rect2( 216, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 8 )
region = Rect2( 252, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 8 )
region = Rect2( 288, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 8 )
region = Rect2( 324, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 8 )
region = Rect2( 360, 69, 36, 23 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 8 )
region = Rect2( 396, 69, 36, 23 )

[sub_resource type="SpriteFrames" id=61]
animations = [ {
"frames": [ SubResource( 44 ) ],
"loop": false,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": false,
"name": "start",
"speed": 10.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[node name="ScannerCave" type="Node2D" groups=["saveable", "unstyled"]]
z_index = -40
script = ExtResource( 1 )
biome = "yellow"

[node name="Sprites" type="Control" parent="."]
margin_right = 96.0
margin_bottom = 48.0
rect_clip_content = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 50, 22 )
texture = ExtResource( 3 )
vframes = 2

[node name="Left" type="AnimatedSprite" parent="Background"]
position = Vector2( 2, 3 )
frames = SubResource( 23 )

[node name="ResourceGrabberLeft" parent="Background/Left" instance=ExtResource( 13 )]
position = Vector2( -29, 3 )
dropType = "iron"

[node name="Resource" type="Sprite" parent="Background/Left"]
position = Vector2( -29, 3 )
texture = ExtResource( 12 )

[node name="Right" type="AnimatedSprite" parent="Background"]
position = Vector2( 2, 3 )
frames = SubResource( 61 )

[node name="ResourceGrabberRight" parent="Background/Right" instance=ExtResource( 13 )]
position = Vector2( 27, 2 )
dropType = "iron"

[node name="Resource" type="Sprite" parent="Background/Right"]
position = Vector2( 27, 2 )
texture = ExtResource( 12 )

[node name="Scanner" type="AnimatedSprite" parent="Background"]
position = Vector2( 12, 7 )
frames = ExtResource( 11 )
animation = "empty"

[node name="Spitze" type="AnimatedSprite" parent="Background/Scanner"]
frames = ExtResource( 11 )
animation = "empty"

[node name="ActiveAmbSound" parent="Background/Scanner" instance=ExtResource( 7 )]
stream = ExtResource( 10 )
volume_db = -1.362
pitch_scale = 1.04
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 300.0
minAudibleDistance = 80.0

[node name="FocusMarker" type="Sprite" parent="."]
position = Vector2( 59, 26 )
texture = ExtResource( 5 )

[node name="ScannerTakenSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 9 )
volume_db = 3.008
pitch_scale = 1.22
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0

[node name="Usable" parent="." instance=ExtResource( 4 )]
position = Vector2( 61, 28 )
visibleOnFocus = NodePath("../FocusMarker")

[node name="Tween" type="Tween" parent="."]

[node name="AlphaMap" type="Sprite" parent="."]
visible = false
position = Vector2( 50, 24 )
texture = ExtResource( 2 )

[connection signal="animation_finished" from="Background/Left" to="." method="_on_Left_animation_finished"]
[connection signal="grabbed_resource" from="Background/Left/ResourceGrabberLeft" to="." method="_on_ResourceGrabberLeft_grabbed_resource"]
[connection signal="animation_finished" from="Background/Right" to="." method="_on_Right_animation_finished"]
[connection signal="grabbed_resource" from="Background/Right/ResourceGrabberRight" to="." method="_on_ResourceGrabberRight_grabbed_resource"]
[connection signal="animation_finished" from="Background/Scanner" to="." method="_on_Scanner_animation_finished"]
[connection signal="animation_finished" from="Background/Scanner/Spitze" to="." method="_on_Spitze_animation_finished"]
